add init command to .circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run:
           name: database setup
-          command: go run migrations/*.go
+          command: |
+          go run migrations/*.go init
+          go run migrations/*.go
       - run:
           name: Run tests
           command: go test
