--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,14 @@ workflows:
           filters:
             branches:
               only: sequential-branch-filter
-
+          steps:
+            - checkout
+            - run:
+                name: database migrations
+                command: |
+                go build -o bin/migrations -v .
+                bin/migrations
+            
 jobs:
   build:
     docker:
@@ -33,12 +40,9 @@ jobs:
       - run:
           name: Waiting for Postgres to be ready
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
-      - run: 
-          name: database setup
-          command: go run migrations/*.go init
       - run:
           name: database migrations
-          command: go run migrations/*.go
+          command: go run ./migrations
       - run:
           name: Run tests
           command: go test
