--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  heroku: circleci/heroku@1.2.5
+  heroku: circleci/heroku@1.2.6
 
 workflows:
   heroku_deploy:
@@ -13,8 +13,7 @@ workflows:
           filters:
             branches:
               only: sequential-branch-filter
-          steps:
-            - checkout
+          post-steps:
             - run:
                 name: database migrations
                 command: go build -o bin/migrations -v .
