--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,4 +45,4 @@ jobs:
           command: go run ./migrations
       - run:
           name: Run tests
-          command: go test ./testing/... -v -coverpkg=./...
+          command: go test ./... -v
